# Electronic_net

./: .coverage  .env.sample  Readme.md  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
network/management/commands/: fill_db.py
network/migrations/: 0001_initial.py  0002_alter_networkentity_debt.py  0002_initial.py  0003_networkentity_supplier_type_and_more.py  0004_delete_product.py
products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  0002_product_description_alter_product_model.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
